Added mapping for new Miam policy changes.